test/typeerrors/funargs1.act
def f(x,y):
    return x+y

a = f(3,x=3,y=3)
