test/typeerrors/funargs1.golden
Building file ../test/typeerrors/funargs1.act
  Compiling funargs1.act for development

ERROR: Error when compiling funargs1 module: Type error

  |
4 |a = f(3,x=3,y=3)
  |        ^
Keyword element 'x' is not expected

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

